--- a/src/components/Paginator/Paginator.module.css
+++ b/src/components/Paginator/Paginator.module.css
@@ -1,4 +1,52 @@
-.selectedPage{
-    color: black;
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+.container {
+    padding: 1rem 0;
+}
+
+.paginatorWrap {
+    margin: 0 auto;
+    display: flex;
+    max-width: 250px;
+    justify-content: space-between;
+}
+
+.pageNumber {
+    font-family: 'Roboto', sans-serif;
+    font-size: 15px;
+}
+
+.pageNumberWrap, .selectedPage  {
+    color: white;
+    cursor: pointer;
     font-weight: 700;
+    width: 30px;
+    height: 30px;
+    border-radius: 25%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.selectedPage {
+    font-weight: 700;
+    background-color: #ff0000;
+}
+
+.pageNumberWrap:hover{
+    border: 2px solid #ff0000;
+    background-color: rgba(255, 0, 0, 0.1);
+}
+
+
+.navigationElement {
+    font-size: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.navigationElement:hover {
+    color: #ff0000;
 }
