--- a/src/pages/Main/Assets/Assets.module.css
+++ b/src/pages/Main/Assets/Assets.module.css
@@ -1,39 +1,105 @@
-.wrap {
-    display: flex;
-    justify-content: center;
+.tableWrap {
+    margin: 0 auto;
+    max-width: 1400px;
+    padding: 0 20px;
+}
+
+
+@media (max-width: 1200px) {
+    .tableWrap {
+        max-width: 1000px;
+    }
+}
+
+@media (max-width: 767px) {
+    .tableWrap {
+        max-width: 1027px;
+    }
 }
 
 table {
-    table-layout: fixed;
-    width: 70%;
+    width: 100%;
     border-collapse: collapse;
+    /*min-width: 1100px;*/
+    white-space: normal;
 }
+
+@media (max-width: 780px) {
+    /*.tableWrap {*/
+    /*    min-width: 1027px;*/
+    /*}*/
+    tbody td:nth-child(2) {
+        position: sticky;
+        left: 24px;
+        z-index: 100;
+    }
+}
+
 
 th, td {
     padding: 0.5rem 1rem;
 }
 
 tr {
-    border-bottom: 1px solid #eaeaea;
+    border-bottom: 1px solid #33373f;
+    line-height: 2rem;
+}
+@media (max-width: 780px) {
+    tr {
+        line-height: 2rem;
+    }
 }
 
+
 tbody tr:hover{
-    background: #f8fdfd;
+    background: rgba(249, 252, 255, 0.06);
     cursor: pointer;
 }
+
 
 .theadStyle {
     height: 3rem;
     font-size: 12px;
 }
+@media (max-width: 780px) {
+    .theadStyle{
+        font-size: 14px;
+        height: 5rem;
+    }
+}
+
+
+
+
 thead th:nth-child(1) {
     width: 7%;
     text-align: right;
+}
+@media (max-width: 780px) {
+    thead th:nth-child(1){
+        max-width: 50px;
+    }
+}
+
+tbody  td:nth-child(2) {
+    max-width: 150px;
 }
 
 thead th:nth-child(1), th:nth-child(2) {
     text-align: left;
 }
+/*@media (max-width: 780px) {*/
+/*    tbody td:nth-child(2){*/
+/*        max-width: 150px;*/
+/*    }*/
+/*    tbody td:nth-child(3),*/
+/*    td:nth-child(4),*/
+/*    td:nth-child(5),*/
+/*    td:nth-child(6){*/
+/*        max-width: 200px;*/
+/*    }*/
+/*}*/
+
 
 thead th:nth-child(3), th:nth-child(4), th:nth-child(5), th:nth-child(6),
 tbody td:nth-child(3), td:nth-child(4), td:nth-child(5), td:nth-child(6) {
