--- a/src/pages/Main/Assets/CoinElement/CoinElement.module.css
+++ b/src/pages/Main/Assets/CoinElement/CoinElement.module.css
@@ -9,18 +9,20 @@
 }
 
 @media (max-width: 780px) {
-    tbody td:nth-child(2) {
-        position: sticky;
-        left: 24px;
-        z-index: 100;
+    .title {
+        font-size: 16px;
     }
 }
 
 .symbol {
     margin-left: 0.6rem;
-    font-weight: 500;
     font-size: 14px;
     color: #afafaf;
+}
+@media (max-width: 780px) {
+    .symbol {
+        font-size: 16px;
+    }
 }
 
 .titleWrap {
@@ -28,11 +30,22 @@
     align-items: center;
 }
 
+
 .number {
     font-size: 14px;
-    font-weight: bold;
 }
+@media (max-width: 780px) {
+    .number {
+        font-size: 16px;
+    }
+}
+
+
 
 .hidden {
     display: none;
+}
+
+.marketCap {
+    color: #95a0a6;
 }
