--- a/src/pages/Main/Assets/Assets.module.css
+++ b/src/pages/Main/Assets/Assets.module.css
@@ -68,9 +68,6 @@ tbody tr:hover{
     }
 }
 
-
-
-
 thead th:nth-child(1) {
     width: 7%;
     text-align: right;
@@ -88,17 +85,6 @@ tbody  td:nth-child(2) {
 thead th:nth-child(1), th:nth-child(2) {
     text-align: left;
 }
-/*@media (max-width: 780px) {*/
-/*    tbody td:nth-child(2){*/
-/*        max-width: 150px;*/
-/*    }*/
-/*    tbody td:nth-child(3),*/
-/*    td:nth-child(4),*/
-/*    td:nth-child(5),*/
-/*    td:nth-child(6){*/
-/*        max-width: 200px;*/
-/*    }*/
-/*}*/
 
 
 thead th:nth-child(3), th:nth-child(4), th:nth-child(5), th:nth-child(6),
@@ -106,3 +92,18 @@ tbody td:nth-child(3), td:nth-child(4), td:nth-child(5), td:nth-child(6) {
     text-align: right;
 }
 
+.heading {
+    margin: 0 auto;
+    max-width: 1300px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+@media (max-width: 1200px) {
+    .heading{
+        justify-content: center;
+
+    }
+}
