--- a/src/pages/Main/Assets/CoinElement/CoinElement.module.css
+++ b/src/pages/Main/Assets/CoinElement/CoinElement.module.css
@@ -6,6 +6,7 @@
     margin-block-end: 1em;
     margin-inline-start: 0;
     margin-inline-end: 0;
+    letter-spacing: 1px;
 }
 
 @media (max-width: 780px) {
