--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -55,6 +55,8 @@ span {
 
 .flexWrap {
     display: flex;
+    justify-content: space-between;
+
 }
 
 .price, .changePercent, .internalTitle {
@@ -63,15 +65,20 @@ span {
     align-items: center;
     color: #d6f6ff;
 }
-
-.flexWrap:last-child {
-    justify-content: space-between;
+.changePercent {
+    text-align: right;
 }
 
 .internalTitle {
     letter-spacing: 1px;
     font-weight: 700;
     margin-right: 1rem;
+}
+
+.chartWrap {
+    width: 100%;
+    max-height: 40%;
+    margin-top: 1rem;
 }
 
 
