--- a/src/components/ChartComponent/ChartComponent.module.css
+++ b/src/components/ChartComponent/ChartComponent.module.css
@@ -1,13 +1,11 @@
-.preloader{
-    position: absolute;
+.chartWrap {
     width: 100%;
     height: 100%;
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
 }
 
-.preloaderImg {
-    max-width: 5rem;
+canvas {
     width: 100%;
 }
