--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,7 +1,5 @@
 @charset "UTF-8";
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Reem+Kufi+Fun&family=Roboto&display=swap');
 * {
     padding: 0;
     margin: 0;
@@ -39,7 +37,6 @@ body {
     line-height: 1;
     font-size: 14px;
     -ms-text-size-adjust: 100%;
-    -moz-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
 }
 
@@ -74,7 +71,7 @@ img {
     vertical-align: top;
 }
 
-p {
+p, a {
     font-family: 'Roboto', sans-serif;
 }
 
@@ -133,4 +130,8 @@ body {
     color: #fff;
     text-align: left;
     background-color: #212529;
+}
+
+a {
+    color: white;
 }
