--- a/src/components/Assets/Assets.module.css
+++ b/src/components/Assets/Assets.module.css
@@ -1,11 +1,9 @@
 .tableWrap {
     margin: 0 auto;
     max-width: 1400px;
-    padding: 0 20px;
 }
 
-
-@media (max-width: 1200px) {
+@media (max-width: 1200px) {head
     .tableWrap {
         max-width: 1000px;
     }
@@ -13,24 +11,25 @@
 
 @media (max-width: 767px) {
     .tableWrap {
-        max-width: 1027px;
+        max-width: 100%;
+    }
+    .container {
+        max-width: 97%;
+        overflow-x: scroll;
     }
 }
 
 table {
     width: 100%;
     border-collapse: collapse;
-    /*min-width: 1100px;*/
     white-space: normal;
 }
 
 @media (max-width: 780px) {
-    /*.tableWrap {*/
-    /*    min-width: 1027px;*/
-    /*}*/
-    tbody td:nth-child(2) {
+    tbody td:nth-child(3) {
+        background-color: #212529;
         position: sticky;
-        left: 24px;
+        left: -1px;
         z-index: 100;
     }
 }
@@ -53,7 +52,6 @@ tr {
 
 tbody tr:hover{
     background: rgba(249, 252, 255, 0.06);
-    cursor: pointer;
 }
 
 
@@ -78,16 +76,16 @@ thead th:nth-child(1) {
     }
 }
 
-tbody  td:nth-child(2) {
+tbody  td:nth-child(3) {
     max-width: 150px;
 }
 
-thead th:nth-child(1), th:nth-child(2) {
+thead th:nth-child(1), th:nth-child(3) {
     text-align: left;
 }
 
 
-thead th:nth-child(3), th:nth-child(4), th:nth-child(5), th:nth-child(6),
-tbody td:nth-child(3), td:nth-child(4), td:nth-child(5), td:nth-child(6) {
+thead th:nth-child(4), th:nth-child(5), th:nth-child(6), th:nth-child(7),
+tbody td:nth-child(4), td:nth-child(5), td:nth-child(6), td:nth-child(7) {
     text-align: right;
 }
