--- a/src/components/CoinDescription/CoinDescription.module.css
+++ b/src/components/CoinDescription/CoinDescription.module.css
@@ -26,12 +26,6 @@
     }
 }
 
-.cardWrap:hover {
-    box-shadow: 0 0 30px 1px #346da6;
-    transform: translateY(-5px);
-    color: #4fc180;
-}
-
 span {
     font-family: 'Roboto', sans-serif;
 }
@@ -42,11 +36,15 @@ span {
 
 }
 
-.symbol {
-    cursor: pointer;
+.symbol, .price {
     font-weight: 700;
     letter-spacing: 2px;
     margin: 0 1rem 1rem 0;
+}
+
+.price {
+    position: fixed;
+    right: 15px;
 }
 
 .titleWrap {
@@ -57,24 +55,37 @@ span {
 
 .flexWrap {
     display: flex;
-    justify-content: space-between;
-
+    flex-wrap: wrap;
+    flex-direction: row;
+    margin-bottom: 5px;
 }
 
-.price, .changePercent, .internalTitle {
+
+.changePercent, .internalTitle, .supply {
     font-size: 16px;
     display: flex;
     align-items: center;
     color: #d6f6ff;
+    margin-bottom: 5px;
+
 }
-.changePercent {
-    text-align: right;
+
+
+@media (max-width: 780px) {
+    .internalTitle.supply, .supply {
+        font-size: 13px;
+    }
+
 }
 
 .internalTitle {
     letter-spacing: 1px;
     font-weight: 700;
     margin-right: 1rem;
+}
+
+.alignLeft {
+    text-align: left;
 }
 
 .chartWrap {
