--- a/src/components/common/FormsControls/FormsControls.module.css
+++ b/src/components/common/FormsControls/FormsControls.module.css
@@ -43,6 +43,7 @@ input:invalid {
     background-color: rgb(79, 193, 128);
 }
 
+
 .btn {
     font-size: 16px;
     padding: 0.5rem 1rem;
@@ -50,13 +51,21 @@ input:invalid {
     height: 100%;
     border: none;
     color: white;
-    background-color: rgb(255, 0, 68);
+    font-weight: 700;
     border-radius: 10px;
-    box-shadow: inset 0 0 0 0 #ff4d00;
     transition: ease-out 0.4s;
     outline: none;
 }
 
+.btnRed {
+    background-color: #ff0000;
+}
+
+.btnGreen {
+    background-color: #4fc180;
+}
+
 .btn:hover {
-    box-shadow: inset 30vw 0 30vw 0 #4fc180;
+    background-color: #8724ff;
+
 }
