profile reducer has been added has been replaced modal window has been modified algorithms in favourites

--- a/src/components/CoinElement/CoinElement.module.css
+++ b/src/components/CoinElement/CoinElement.module.css
@@ -60,9 +60,10 @@
 
 .favourite, .alreadyFavourite {
     cursor: pointer;
-    font-size: 26px;
+    font-size: 20px;
     transition: .3s;
     transition-timing-function: linear;
+    user-select: none;
 }
 
 .favourite {
