--- a/src/components/Paginator/Paginator.module.css
+++ b/src/components/Paginator/Paginator.module.css
@@ -44,6 +44,7 @@
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    user-select: none;
 }
 
 .navigationElement:hover {
