--- a/src/components/common/PopUp/PopUp.module.css
+++ b/src/components/common/PopUp/PopUp.module.css
@@ -1,7 +1,7 @@
 .popUp {
     position: fixed;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     background-color: rgba(17, 21, 21, 0.51);
     top: 0;
     left: 0;
