--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Reem+Kufi+Fun&family=Roboto&display=swap');
+
 * {
     padding: 0;
     margin: 0;
@@ -120,7 +121,8 @@ html {
     font-family: sans-serif;
     line-height: 1.15;
     -webkit-text-size-adjust: 100%;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
 
 body {
     margin: 0;
